Add some changes in html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-    <title>Git</title>
+    <title>Git chane</title>
 </head>
 
 <body>
-    <p>New content</p>
+    <p>Some changes</p>
 </body>
 </html>
